--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,30 @@
 #banner {
-       background-image: url(../images/dark_tint.png), url(../images/bokeh_car_lights_bg.jpg);
+       background-image: url(../images/BannerWeb1copy.png);
        background-position: center center;
        background-size: cover;
+       
+       
+       color: #ffffff;
+       padding: 10.5em 0em 10.5em;
+       text-align: center;
+}
+
+#bannner {
+       background-image: url(../images/BannerWebEOcopy.png) ;
+       background-position: center center;
+       background-size: cover;
+       background-repeat: no-repeat;
+       
+      
+       
+       
        color: #ffffff;
        padding: 10em 0em 10em;
        text-align: center;
 }
+
+
+
 
 .imgmcl img {
               display: block;
@@ -17,75 +36,115 @@
             }
 
 
-#footer .container-fluid{background: white;
-       padding: 1em 0em 1em;
-
-}
-
-ul.unstyled {
-       list-style: none;
-       padding-left: 0;
+            #footer .container-fluid{background: white;
+              padding: 1em 0em 3.2em;
+              background: -webkit-linear-gradient(59deg, #515599, #c30ed7);
+              background: linear-gradient(59deg, #515599, #c30ed7);
+              color: white;
        
-}
-
-       ul.unstyled li {
-              padding: 0.3em 0;
+              
+       
+       }
+       
+       a{ 
+              color:white;
+       }
+       
+       ul.unstyled {
+              list-style: none;
+              padding-left: 0;
               
        }
-
-
-.contactinfo {
-              
-              display: flex;
-              
-              justify-content: center;
-              }
-
-
-/* One */
-header.major {
-       text-align: center;
-       margin-bottom: 4em;
-}
-
-.wrapper {
-       padding: 6em 0em 4em;
-       /* Style 1 Wrapper */
-       /* Style 2 Wrapper */
-       /* Style 3 Wrapper */
-}
-
-.wrapper.style1 {
-       background-color: #F5F5F5;
-       border-bottom: 1px solid rgba(144, 144, 144, 0.25);
-       border-top: 1px solid rgba(144, 144, 144, 0.25);
-}
-
-.wrapper.style1 .box {
-       background-color: #fff;
-       padding: 3em 2.5em;
-}
-
-.container2-fluid {
-       padding: 2em 0em 2em;
-       background-color: #F5F5F5;
-       border-bottom: 1px solid rgba(144, 144, 144, 0.25);
-       border-top: 1px solid rgba(144, 144, 144, 0.25);
-}
-
-
-/* tes */
-#banner2 {
-       background-image: url(./images/bukuperdana2.png);
-       background-position: center center;
-       background-size: cover;
-       color: #ffffff;
        
-       text-align: center;
-}
-
-
-p.jarak {
-       line-height: 2;
-     }
-
+              ul.unstyled li {
+                     padding: 0.3em 0;
+                     
+              }
+       
+       
+       .contactinfo {
+                     
+                     display: flex;
+                     
+                     justify-content: center;
+                     }
+       
+       
+       /* One */
+       header.major {
+              text-align: center;
+              margin-bottom: 4em;
+       }
+       
+       .wrapper {
+              padding: 6em 0em 4em;
+              /* Style 1 Wrapper */
+              /* Style 2 Wrapper */
+              /* Style 3 Wrapper */
+       }
+       
+       .wrapper.style1 {
+              background-color: #F5F5F5;
+              border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+              border-top: 1px solid rgba(144, 144, 144, 0.25);
+       }
+       
+       .wrapper.style1 .box {
+              background-color: #fff;
+              padding: 3em 2.5em;
+       }
+       
+       .container2-fluid {
+              padding: 2em 0em 2em;
+              background-color: #F5F5F5;
+              border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+              border-top: 1px solid rgba(144, 144, 144, 0.25);
+       }
+       
+       
+       /* tes */
+       #banner2 {
+              background-image: url(./images/bukuperdana2.png);
+              background-position: center center;
+              background-size: cover;
+              color: #ffffff;
+              
+              text-align: center;
+       }
+       
+       
+       p.jarak {
+              line-height: 2;
+            }
+       
+       
+            .col-heading {
+              display: block;
+              font-size: 2rem;
+              text-transform: uppercase;
+              color: white;
+              font-weight: 500;
+              margin: 1rem 0;
+              padding: .4rem 0px;
+              border-bottom: 1px solid #c7c7c7; 
+              letter-spacing: 3px;
+              }
+       
+       
+              ul { list-style: none;
+              margin:0 }
+       
+              li {padding: .2rem;
+              font-size: 1.3rem;
+              margin: .2rem;
+              }
+       
+        li.a { font-size: 2rem;
+              padding: .4rem;}
+       
+              ul li {
+                     margin: -5px;
+                   }
+       
+       
+       .ull{margin: -3px;}
